fixed overflow pages

--- a/base/static/css/main.css
+++ b/base/static/css/main.css
@@ -174,15 +174,18 @@ a:active {
 Base styles: opinionated defaults
 ========================================================================== */
 
-html {
+html,body {
 	color: #222;
+	background: #252627;
 	font-size: 1em;
 	font-family: "Overpass";
+	font-style: normal;
+	font-weight: 300;
 	line-height: 1.4;
 	-webkit-text-size-adjust:100%;
-	-ms-text-size-adjust:100%
+	-ms-text-size-adjust:100%;
+	height: 100%;
 }
-
 
 /*
 * Remove text-shadow in selection highlight:
@@ -229,18 +232,6 @@ textarea {
 	box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 }
-
-.section {
-	text-align: center;
-}
-
-body {
-	background: #252627;
-	font-family: "Overpass";
-	font-style: normal;
-	font-weight: 300;
-}
-
 
 /* Logo styling */
 
@@ -439,13 +430,16 @@ body {
 }
 
 .wrapper {
-	margin-left: 60px;
+	padding-left: 60px;
 	height: 100%;
 	width: 100%;
 }
 
 
 /*================================================== HOME PAGE ============================================== */
+.home-page {
+	height: 100%;
+}
 .home-page .flat-button:hover {
 	background: #08fdd8;
 	color: #252627;
@@ -459,7 +453,6 @@ body {
 	top: 0;
 	left: 0;
 	height: 100%;
-	padding: 0 33.33%;
 	display: flex;
 	justify-content: center;
 	perspective: 1000px;
